--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html> 
 <head>
     <title>Git and Github</title>
+    <style>
+        .heading{
+            background-color: blueviolet; color: rgb(5, 5, 30);
+        }
+    </style>
 </head>
 <body>
     <h1>Hello evryone how are you</h1>
+    <div class="headind">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quia, sequi incidunt natus impedit adipisci molestias maiores tempora numquam aperiam, facilis asperiores esse.</p>
+    </div>
 </body>
 </html>
