--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hello evryone how are you</h1>
-    <div class="headind">
+    <div class="heading">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quia, sequi incidunt natus impedit adipisci molestias maiores tempora numquam aperiam, facilis asperiores esse.</p>
     </div>
 </body>
