--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <div class="heading">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quia, sequi incidunt natus impedit adipisci molestias maiores tempora numquam aperiam, facilis asperiores esse.</p>
     </div>
+    <div>
+        <h2>Education site<img src="edusvg.svg"alt="education" height="40px"></h2>
+    </div>
 </body>
 </html>
